bin/xserver/src/bottom_pane/snapshots/chaos_xserver__bottom_pane__feedback_view__tests__feedback_view_good_result.snap
---
source: bin/xserver/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ Tell us more (good result)
▌
▌ (optional) Write a short description to help us further

Press enter to confirm or esc to go back
