bin/xserver/src/bottom_pane/snapshots/chaos_xserver__bottom_pane__feedback_view__tests__feedback_view_safety_check.snap
---
source: bin/xserver/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ Tell us more (safety check)
▌
▌ (optional) Share what was refused and why it should have b

Press enter to confirm or esc to go back
